# study

./: .gitignore  JSR.txt  New Text Document (2).txt  README.md  project_vimrc  ps1.txt  setupNewUbuntuBox.sh
cmakeTutorial/generator_expressions/: 1_README.txt  2_README.txt  CMakeLists.txt  main.cpp
cmakeTutorial/sample1/: CMakeLists.txt  main.cpp  rajat_simple  simple
cmakeTutorial/sample2/: CMakeLists.txt  main.c
cmakeTutorial/sample3/: CMakeLists.txt
cmakeTutorial/sample3/client/: CMakeLists.txt  main.cpp
cmakeTutorial/sample3/include/: roof.h
cmakeTutorial/sample3/lib/: CMakeLists.txt  README  roof.cpp  roof_p.h
cmakeTutorial/sample4/: CMakeLists.txt  TutorialConfig.h  TutorialConfig.h.in  tutorial.cpp
cmakeTutorial/sample5/source/: CMakeLists.txt
cmakeTutorial/sample_ultimate/: CMakeLists.txt
cmakeTutorial/sample_ultimate/cmake/: CompilerCheck.cmake  config.hpp.in
cplusplus/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  main.cpp  study_order.txt
cplusplus/cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  ccache.cmake  flags_override.cmake  gcc_modules.cmake
cplusplus/src/: CMakeLists.txt
cplusplus/src/abc/: 1.cpp  2.cpp  3.cpp  4.cpp  7.cpp  CMakeLists.txt
cplusplus/src/algorithms/: CMakeLists.txt  add_binary_strings.cpp  ai_playground.cpp  all_possible_strings.cpp  all_sortings.cpp  alphabetically_smallest_strings.cpp  apply_operation_to_array.cpp  best_time_to_buy_sell_stock.cpp  best_time_to_buy_sell_stock_2.cpp  best_time_to_buy_sell_stock_3.cpp  climbing_stairs.cpp  coin_energy.cpp  dijkstra.cpp  egg_drop.cpp  egg_drop_memoization.cpp  egg_drop_more_optimized.cpp  flipping_matrix.cpp  integers.txt  itch_market_data.cpp  iterate_integers_in_file.cpp  largest_increasing_subsequence.cpp  lexographically_largest_valid_sequence.cpp  longest_common_subsequence.cpp  majority_element.cpp  majority_element_2.cpp  matrix_mutiplication.cpp  max_area_of_island.cpp  max_contiguous_subarray.cpp  max_distance_unequal_elements.cpp  max_earnings_from_taxi.cpp  max_volume_of_water.cpp  min_order_statistic.cpp  minimum_cost_of_tickets.cpp  most_frequent_even_element.cpp  number_of_islands.cpp  print_error.cpp  subarray_product_less_than_k.cpp  subarray_sum_equals_k.cpp  surrounded_regions.cpp  three_sum.cpp  (+3 more)
cplusplus/src/amps_60East/: 1_README.txt  2_README.txt  3_README.txt  4_README.txt  5_README.txt  6_README.txt  7_README.txt
cplusplus/src/boost/: CMakeLists.txt
cplusplus/src/concepts_practice/: CMakeLists.txt  cp_1.cpp
cplusplus/src/cpp17_20/: CMakeLists.txt  concepts_37.cpp  concepts_38.cpp  concepts_39.cpp  fold_expressions_15.cpp  inline_variables.hpp  inline_variables_16.cpp  jthread_58.cpp  jthread_62.cpp  ranges_and_views_45.txt  ranges_and_views_47.cpp  ranges_and_views_50.cpp  ranges_and_views_51.cpp  ranges_and_views_55.cpp  spaceship_operator_32.cpp  spaceship_operator_33.cpp  spaceship_operator_34.cpp  std_optional_8.cpp
cplusplus/src/cpp_new/: CMakeLists.txt  Must_Read_0.txt  README_3.txt  concepts_36.cpp  concepts_40.cpp  concepts_40_1.cpp  concepts_41.cpp  concepts_42.cpp  concepts_43.cpp  concepts_44.cpp  constinit_consteval_81.cpp  constinit_consteval_82.cpp  coroutine_65.txt  coroutine_66.cpp  coroutine_66_delete.cpp  coroutine_68.txt  coroutine_70.cpp  coroutine_71.cpp  coroutine_73.cpp  evaluation_order_4.cpp  fold_expressions_18.cpp  fold_expressions_19.cpp  integer_sequence_31.cpp  jthread_57.cpp  jthread_59.cpp  jthread_62_a.cpp  lambda_with_template_parameters_76.cpp  lambda_with_template_parameters_77.cpp  lambda_with_template_parameters_78.cpp  lambda_with_template_parameters_79.cpp  lambda_with_template_parameters_80.cpp  ranges_and_views_48.cpp  ranges_and_views_54.cpp  ranges_and_views_55.cpp  ranges_and_views_84.cpp  ranges_and_views_85.cpp  ranges_and_views_86.cpp  spaceship_operator_34.cpp  std_invoke_apply.cpp  std_string_view_26.cpp  (+7 more)
cplusplus/src/dynamic_object_creation/: ArrayOperatorNew.cpp  BadVoidPointerDeletion.cpp  CMakeLists.txt  Const_Binding.cpp  Framis.cpp  GlobalOperatorNew.cpp  MallocClass.cpp  NewAndDelete.cpp  NewHandler.cpp  PlacementOperatorNew.cpp  Tree.h  abc.cpp
cplusplus/src/exception_handling/: 1.cpp  11a.cpp  12.cpp  3.cpp  4.cpp  5.cpp  Must_Read_2.txt  Must_Read_5.txt  del.cpp
cplusplus/src/gRPC/: 1_README.txt  2_README.md  3_README.txt  CMakeLists.txt  greeter_async_client.cpp  greeter_async_client2.cpp  greeter_callback_client.cpp  greeter_callback_server.cpp  greeter_client.cpp  greeter_server.cpp
cplusplus/src/google_benchmark/: 1_README.txt  2_README.txt  CMakeLists.txt  benchmark_understanding.cpp
cplusplus/src/googletest/: CMakeLists.txt  README.md  gtest_1.cpp
cplusplus/src/inheritance_and_composition/: CMakeLists.txt  Car.cpp  Combined.cpp  Composition.cpp  Composition2.cpp  CopyConstructor.cpp  FName1.cpp  FName2.cpp  Good_Point_1.txt  Good_Point_2.txt  Inheritance.cpp  NameHiding.cpp  Order.cpp  PrivateInheritance.cpp  Protected.cpp  PseudoConstructor.cpp  Public_private_Protected.cpp  Redefining_Overloaded_functions.cpp  Simple_1.cpp  Simple_2.cpp  Simple_3.cpp  Simple_4.cpp  Simple_5.cpp  SynthesizedFunctions.cpp  Upcasting.cpp  Useful.h
cplusplus/src/inline_functions/: CMakeLists.txt  EvaluationOrder.cpp  Must_Read_1.txt
cplusplus/src/multiple_inheritance/: 1.cpp  2.cpp  2a.cpp  3.cpp  4.cpp  5.cpp  (+6 more)
cpp/CPP_NEW/: CMakeLists.txt  Doxyfile  auto_with_brace_initialization.cpp  blockchain.py  conanfile.py  conanfile.txt
cpp/interesting_facts/: CMakeLists.txt
googletest/: 1.cpp  1_README.txt  2_README.txt  CMakeLists.txt  main.cpp  painter.hpp  turtle.hpp  turtle_impl.cpp  turtle_impl.hpp  turtle_mock.hpp  turtle_test.cpp
googletest/c2/: CMakeLists.txt
googletest/include/: soundex.hpp
googletest/src/: CMakeLists.txt  main.cpp  soundex.cpp
googletest/tests/: CMakeLists.txt  SoundexTest.cpp  main.cpp
protobuf/proto_clion_cmake/: CMakeLists.txt
protobuf/src/: CMakeLists.txt  addressbook.cpp
pythonTutorial/generic/: pyproject.toml
pythonTutorial/polarsPractice/: pyproject.toml
pythonTutorial/py_c_api/: CMakeLists.txt
(+3764 files in other folders)
