# cplusplus
#add_subdirectory(name_control)
#add_subdirectory(inline_functions)
#add_subdirectory(references_and_copy_ctors)
#add_subdirectory(inheritance_and_composition)
#add_subdirectory(polymorphism_and_virtual_functions)
#add_subdirectory(dynamic_object_creation)
#add_subdirectory(multiple_inheritance)
#add_subdirectory(operator_overloading)
#add_subdirectory(abc)
#add_subdirectory(rtti) # This is not done
#add_subdirectory(smart_pointers)
#add_subdirectory(rvalue_references)
#add_subdirectory(sfinae_and_enable_if)
#add_subdirectory(thread_mutex_atomic_lock_free)
add_subdirectory(algorithms)
#add_subdirectory(cpp17_20)
#add_subdirectory(boost)
add_subdirectory(scratch)

