[project]
name = "polarspractice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rajat Girotra", email = "rajatgirotra@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pendulum>=3.1.0",
    "polars>=1.33.0",
    "rich>=14.1.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pylint>=3.3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
